record book with firestore

--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,27 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/6.4.2/firebase-app.js"></script> -->
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <script>
+      // Your web app's Firebase configuration
+      // var firebaseConfig = {
+      // apiKey: "AIzaSyBG95iixK_JyLw5kfhU5OwgJuHyZYPAgPU",
+      // authDomain: "memory-1cf1f.firebaseapp.com",
+      // databaseURL: "https://memory-1cf1f.firebaseio.com",
+      // projectId: "memory-1cf1f",
+      // storageBucket: "",
+      // messagingSenderId: "306319575118",
+      // appId: "1:306319575118:web:1126ac319022be01"
+      // };
+      // // Initialize Firebase
+      // firebase.initializeApp(firebaseConfig);
+      // // var database = firebase.database();
+      // const db = firebase.firestore(firebaseConfig);
+    </script>
   </body>
 </html>
